# compare_perfomance_isdigit

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
perf_data/: categoies.py  versions.py
results/Darwin_3.12.5/: performance_comparison.csv
results/Darwin_3.13.0/: performance_comparison.csv
