[tool.poetry]
name = "compare-perfomance-isdigit"
version = "0.1.0"
description = ""
authors = ["lexxai <lexxai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
